Partitions done
- Swagger API changes
- Enable/Disable the API from the config
- Max partition size
