# src/app/api/sharelink/[[...path]]/route.ts
@@ -2,12 +2,13 @@ import { NextResponse } from "next/server";
 import path from "path";
 import { db } from "@/../data/index";
 import { eqLow, filesTable } from "@/../data/schema";
-import { and, eq } from "drizzle-orm";
+import { and, eq, isNull } from "drizzle-orm";
 import { v7 } from 'uuid';
 import { getRootAndPermission } from "@/lib/api";
 import { root as ROOT } from "@/lib/root";
 import validateApi from "@/lib/validateApi";
 import { auth } from "@/auth";
+import { getPartition } from "@/lib/partition";
 
 
 export const GET = auth(async (req: NextRequest, { params }: { params: Promise<{ path?: string[] }> }): Promise<NextResponse> => {
@@ -20,6 +21,7 @@ export const GET = auth(async (req: NextRequest, { params }: { params: Promise<{
 
     const rawPathStr = (await params).path?.map((value) => decodeURIComponent(value).split('/')).flat() || [];
     const pathStr = path.join(root, ...rawPathStr);
+    const partition = getPartition(req);
 
     if (!pathStr.startsWith(root)) return NextResponse.json({ error: 'Path is not in root.' }, { status: 403 });
 
@@ -30,6 +32,7 @@ export const GET = auth(async (req: NextRequest, { params }: { params: Promise<{
             eqLow(filesTable.name, fileName),
             eqLow(filesTable.path, filePath),
             eq(filesTable.directory, 0),
+            (partition && typeof ROOT !== 'string') ? eqLow(filesTable.partition, partition!) : isNull(filesTable.partition),
         )
     ).get();
 
@@ -47,6 +50,7 @@ export const GET = auth(async (req: NextRequest, { params }: { params: Promise<{
             eqLow(filesTable.name, fileName),
             eqLow(filesTable.path, filePath),
             eq(filesTable.directory, 0),
+            (partition && typeof ROOT !== 'string') ? eqLow(filesTable.partition, partition!) : isNull(filesTable.partition),
         )
     ).execute();
 
